# pathfinder

./: .gitignore  Procfile  pyproject.toml  requirements.txt
pathfinderproject/: asgi.py  manage.py  urls.py  wsgi.py
pathfinderproject/pathfinderproject/: settings.py  urls.py
pathfinderproject/phenomena/: models.py  urls.py  views.py
pathfinderproject/phenomena/migrations/: 0001_initial.py  0002_auto_20200624_1520.py  0005_auto_20200625_1515.py
pathfinderproject/phenomena/static/phenomena/: style.css
pathfinderproject/phenomena/templates/: base.html
pathfinderproject/phenomena/templates/phenomena/: country.html  dates.html  index.html  locations.html  single.html
pathfinderproject/settings/: base.py  heroku.py  local.py
pathfinderproject/staticfiles/phenomena/: index.css
phenomena/: admin.py  apps.py  views.py
phenomena/migrations/: 0003_auto_20200624_1555.py  0004_auto_20200625_1514.py  0006_auto_20200625_1600.py
phenomena/static/phenomena/: main.css  single.css
phenomena/templates/phenomena/: country.html  index.html  locations.html  single.html
